# minikv

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
docs/: README.md  architecture.md  build.md  getting-started.md  hash-module-integration.md  module-lifecycle.md  module-services.md  rocksdb-bundle.md
docs/adr/: 0001-current-minikv-boundaries.md  0002-consistency-model-v1.md
docs/architecture/: current-layering.md
docs/layers/: codec.md  command.md  engine.md  facade.md  network.md  runtime.md  server.md  worker.md
docs/perf/: baseline.md
include/minikv/: command.h  config.h  minikv.h
src/: config.h  main.cc  minikv.cc  minikv.h
src/app/: main.cc
src/codec/: key_codec.cc
src/command/: cmd.cc  cmd.h  cmd_create.cc  cmd_create.h  cmd_factory.cc  cmd_factory.h  command_types.h  t_hash.cc  t_hash.h  t_kv.cc  t_kv.h
src/common/: thread_name.cc  thread_name.h
src/core/: core_module.cc  core_module.h  key_service.cc  key_service.h  whole_key_delete_handler.h
src/engine/: db_engine.cc  db_engine.h  key_codec.cc  key_codec.h
src/execution/command/: cmd.cc  cmd.h  cmd_create.cc  cmd_create.h  command_types.h
src/execution/registry/: command_registry.cc  command_registry.h
src/execution/reply/: reply.cc  reply.h  reply_node.h
src/execution/scheduler/: scheduler.cc  scheduler.h
src/execution/worker/: key_lock_table.cc  key_lock_table.h  worker.cc  worker.h
src/kernel/: command_registry.cc  command_registry.h  mutation_hook.h  reply.cc  reply.h  scheduler.cc  scheduler.h  snapshot.cc  snapshot.h  storage_engine.cc  storage_engine.h  write_context.cc  write_context.h
src/module/: background_executor.cc  module_manager.cc  module_manager.h  module_services.cc  module_services.h
src/modules/core/: core_module.cc  core_module.h  key_service.cc  key_service.h  whole_key_delete_handler.h
src/modules/hash/: hash_module.cc  hash_module.h  hash_observer.h  hash_types.h
src/network/: network_server.cc  network_server.h  resp_parser.cc  resp_parser.h
src/runtime/: minikv.cc  minikv.h
src/runtime/module/: background_executor.cc  background_executor.h  module.h  module_manager.cc  module_manager.h  module_services.cc  module_services.h
src/server/: metrics.h  resp_parser.cc  resp_parser.h  server.cc  server.h
src/storage/encoding/: key_codec.cc  key_codec.h
src/storage/engine/: snapshot.cc  snapshot.h  storage_engine.cc  storage_engine.h  write_context.cc  write_context.h
src/types/bitmap/: bitmap_commands.cc  bitmap_commands.h  bitmap_module.cc  bitmap_module.h
src/types/geo/: geo_commands.cc  geo_commands.h  geo_internal.cc  geo_internal.h  geo_module.cc  geo_module.h
src/types/hash/: hash_commands.cc  hash_commands.h  hash_indexing_bridge.h  hash_module.cc  hash_module.h  hash_observer.h
src/types/json/: json_commands.cc  json_commands.h  json_document_utils.cc  json_document_utils.h  json_module.cc  json_module.h  json_path.cc  json_path.h
src/types/list/: list_commands.cc  list_commands.h  list_module.cc  list_module.h
src/types/set/: set_commands.cc  set_commands.h  set_internal.cc  set_internal.h  set_module.cc  set_module.h
src/types/stream/: stream_commands.cc  stream_commands.h  stream_common.cc  stream_common.h  stream_module.cc  stream_module.h
src/types/string/: string_bridge.h  string_commands.cc  string_commands.h  string_module.cc  string_module.h
src/types/zset/: zset_bridge.h  zset_commands.cc  zset_commands.h  zset_module.cc  zset_module.h
src/worker/: key_lock_table.cc  key_lock_table.h  worker.cc  worker.h
tests/command_test/: cmd_test.cc  command_registry_test.cc  hash_command_test.cc
tests/kernel_test/: scheduler_test.cc  snapshot_test.cc
tests/module_test/: background_executor_test.cc  hash_bridge_test.cc  module_exports_test.cc  module_iterator_test.cc  module_keyspace_test.cc  module_manager_test.cc  zset_bridge_test.cc
tests/network_test/: reply_encode_test.cc  server_test.cc
tests/server_test/: reply_encode_test.cc  server_test.cc
tests/type_test/: bitmap_module_test.cc  geo_module_test.cc  hash_module_test.cc  hash_observer_test.cc  json_module_test.cc  list_module_test.cc  set_module_test.cc  stream_module_test.cc  string_module_test.cc  zset_module_test.cc
tools/: baseline_smoke.py  build_linux.sh  export_compile_commands.py  resp_cli.py  sync_rocksdb_bundle.sh
